--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^11.2.1",
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.22.0",
-    "react": "^17.0.1",
+    "icons": "^1.0.0",
+    "react": "^17.0.2",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.0",
